--- a/src/main/resources/com/main/daycare_administrative_system/staff_edit.fxml
+++ b/src/main/resources/com/main/daycare_administrative_system/staff_edit.fxml
@@ -17,7 +17,7 @@
       <Label layoutX="431.0" layoutY="77.0" text="Last Name" />
       <DatePicker fx:id="iDoB" layoutX="301.0" layoutY="263.0" />
       <TextField fx:id="iCPR" layoutX="301.0" layoutY="118.0" prefHeight="25.0" prefWidth="105.0" />
-      <MenuButton fx:id="iGender" layoutX="494.0" layoutY="118.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Gender">
+      <MenuButton fx:id="iGender" layoutX="301.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Gender">
         <items>
           <MenuItem fx:id="male" mnemonicParsing="false" text="Male" />
           <MenuItem fx:id="female" mnemonicParsing="false" text="Female" />
@@ -31,7 +31,7 @@
          </font>
       </Label>
       <Label layoutX="275.0" layoutY="122.0" text="CPR" />
-      <Label layoutX="455.0" layoutY="122.0" text="Select" />
+      <Label layoutX="259.0" layoutY="217.0" text="Select" />
       <Label layoutX="229.0" layoutY="267.0" text="Date of Birth" />
       <Button fx:id="submit" layoutX="520.0" layoutY="263.0" mnemonicParsing="false" text="Submit" />
       <Button fx:id="cancel" layoutX="74.0" layoutY="263.0" mnemonicParsing="false" text="Cancel" />
@@ -40,6 +40,14 @@
       <Label layoutX="242.0" layoutY="168.0" text="Username" />
       <Label layoutX="433.0" layoutY="168.0" text="Password" />
       <PasswordField fx:id="iPass" layoutX="493.0" layoutY="164.0" prefHeight="25.0" prefWidth="105.0" />
-      <CheckBox fx:id="iAdmin" layoutX="510.0" layoutY="217.0" mnemonicParsing="false" text="Admin" />
+      <CheckBox fx:id="iAdmin" layoutX="72.0" layoutY="217.0" mnemonicParsing="false" text="Admin" />
+      <TextField fx:id="iTelephone" layoutX="493.0" layoutY="118.0" prefHeight="25.0" prefWidth="105.0" />
+      <Label layoutX="433.0" layoutY="122.0" text="Telephone" />
+      <Label layoutX="463.0" layoutY="217.0" text="Role" />
+      <TextField fx:id="iRole" layoutX="493.0" layoutY="213.0" prefHeight="25.0" prefWidth="105.0" />
+      <Label layoutX="231.0" layoutY="79.0" text="*" textFill="RED" />
+      <Label layoutX="267.0" layoutY="124.0" text="*" textFill="RED" />
+      <Label layoutX="251.0" layoutY="219.0" text="*" textFill="RED" />
+      <Label layoutX="222.0" layoutY="269.0" text="*" textFill="RED" />
    </children>
 </AnchorPane>
