--- a/src/main/resources/com/main/daycare_administrative_system/staff_edit.fxml
+++ b/src/main/resources/com/main/daycare_administrative_system/staff_edit.fxml
@@ -25,7 +25,7 @@
             <MenuItem fx:id="declineTS" mnemonicParsing="false" text="Decline to State" />
         </items>
       </MenuButton>
-      <Label layoutX="375.0" layoutY="18.0" text="New Staff" textFill="#4bc190">
+      <Label layoutX="375.0" layoutY="18.0" text="Edit Staff" textFill="#4bc190">
          <font>
             <Font name="Calibri Light" size="36.0" />
          </font>
